--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,17 +88,11 @@ jobs:
           GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
           CLOUDFLARE_R2_URL: ${{ secrets.CLOUDFLARE_R2_URL_PREVIEW }}
 
-      - name: Comment PR with preview URL
-        uses: actions/github-script@v7
-        if: github.event_name == 'pull_request'
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '🚀 Preview deployed! Check it out at: https://preview.jonas-versammlung-app.dari-darox.workers.dev'
-            })
+      - name: Output preview URL
+        run: |
+          echo "🚀 Preview deployed successfully!"
+          echo "Preview URL: https://preview.jonas-versammlung-app.dari-darox.workers.dev"
+      
 
   # Deploy to production (main branch)
   deploy-production:
