--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,6 +62,22 @@ jobs:
           ls -la .next/ || echo "No .next directory found"
           echo "Build verification complete"
 
+      - name: Generate preview alias
+        id: preview-alias
+        run: |
+          # Extract branch name and sanitize it for use as alias
+          BRANCH_NAME="${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
+          # Convert to lowercase and replace / with -
+          BRANCH_ALIAS=$(echo "$BRANCH_NAME" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]/-/g' | sed 's/^-*//' | sed 's/-*$//')
+          # Get short commit hash
+          COMMIT_HASH=$(echo "$GITHUB_SHA" | cut -c1-7)
+          # Combine branch and commit hash
+          ALIAS="${BRANCH_ALIAS}-${COMMIT_HASH}"
+          # Limit to 50 chars to leave room for worker name
+          ALIAS=$(echo "$ALIAS" | cut -c1-50)
+          echo "alias=$ALIAS" >> $GITHUB_OUTPUT
+          echo "Generated preview alias: $ALIAS"
+
       - name: Run database migrations (Preview)
         uses: cloudflare/wrangler-action@v3
         with:
@@ -75,8 +91,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          environment: preview
-          command: deploy --env preview
+          command: versions upload --preview-alias ${{ steps.preview-alias.outputs.alias }}
           secrets: |
             BETTER_AUTH_SECRET
             GOOGLE_CLIENT_ID
@@ -91,7 +106,7 @@ jobs:
       - name: Output preview URL
         run: |
           echo "🚀 Preview deployed successfully!"
-          echo "Preview URL: https://preview.jonas-versammlung-app.dari-darox.workers.dev"
+          echo "Preview URL: https://${{ steps.preview-alias.outputs.alias }}-jonas-versammlung-app.dari-darox.workers.dev"
       
 
   # Deploy to production (main branch)
