fix: set environment for preview alias command and remove redundant secrets step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,14 +84,8 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          environment: preview               # GitHub-Env -> wrangler-action setzt dann --env preview
           command: versions upload --preview-alias ${{ steps.preview-alias.outputs.alias }} --env preview
-
-      - name: Set Preview Secrets
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: secret bulk --env preview
           secrets: |
             BETTER_AUTH_SECRET
             GOOGLE_CLIENT_ID
