--- a/package.json
+++ b/package.json
@@ -30,41 +30,41 @@
         "lint": "npx biome format --write"
     },
     "dependencies": {
-        "@hookform/resolvers": "^5.2.1",
-        "@opennextjs/cloudflare": "^1.3.0",
-        "@radix-ui/react-alert-dialog": "^1.1.15",
-        "@radix-ui/react-checkbox": "^1.3.3",
-        "@radix-ui/react-dialog": "^1.1.15",
-        "@radix-ui/react-label": "^2.1.7",
-        "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-separator": "^1.1.7",
-        "@radix-ui/react-slot": "^1.2.3",
-        "better-auth": "^1.3.9",
-        "better-sqlite3": "^12.2.0",
-        "class-variance-authority": "^0.7.1",
-        "clsx": "^2.1.1",
-        "dotenv": "^17.2.2",
-        "drizzle-orm": "^0.44.5",
-        "drizzle-zod": "^0.8.3",
-        "lucide-react": "^0.544.0",
+        "@hookform/resolvers": "5.2.2",
+        "@opennextjs/cloudflare": "1.3.0",
+        "@radix-ui/react-alert-dialog": "1.1.15",
+        "@radix-ui/react-checkbox": "1.3.3",
+        "@radix-ui/react-dialog": "1.1.15",
+        "@radix-ui/react-label": "2.1.8",
+        "@radix-ui/react-select": "2.2.6",
+        "@radix-ui/react-separator": "1.1.8",
+        "@radix-ui/react-slot": "1.2.4",
+        "better-auth": "1.3.9",
+        "better-sqlite3": "12.2.0",
+        "class-variance-authority": "0.7.1",
+        "clsx": "2.1.1",
+        "dotenv": "17.2.2",
+        "drizzle-orm": "0.44.5",
+        "drizzle-zod": "0.8.3",
+        "lucide-react": "0.544.0",
         "next": "15.4.6",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "react-hook-form": "^7.62.0",
-        "react-hot-toast": "^2.6.0",
-        "tailwind-merge": "^3.3.1",
-        "zod": "^4.1.8"
+        "react-hook-form": "7.62.0",
+        "react-hot-toast": "2.6.0",
+        "tailwind-merge": "3.3.1",
+        "zod": "4.1.13"
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.4",
-        "@tailwindcss/postcss": "^4",
-        "@types/node": "^20.19.13",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "drizzle-kit": "^0.31.4",
-        "tailwindcss": "^4",
-        "tw-animate-css": "^1.3.8",
-        "typescript": "^5",
-        "wrangler": "^4.35.0"
+        "@tailwindcss/postcss": "4.1.17",
+        "@types/node": "20.19.13",
+        "@types/react": "19",
+        "@types/react-dom": "19",
+        "drizzle-kit": "0.31.4",
+        "tailwindcss": "4",
+        "tw-animate-css": "1.3.8",
+        "typescript": "5.9.3",
+        "wrangler": "4.35.0"
     }
 }
