--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "dotenv": "17.2.3",
         "drizzle-orm": "0.44.7",
         "drizzle-zod": "0.8.3",
+        "framer-motion": "^12.23.25",
         "lucide-react": "0.555.0",
         "next": "15.5.6",
         "react": "19.2.0",
