--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
         "drizzle-orm": "0.44.7",
         "drizzle-zod": "0.8.3",
         "framer-motion": "^12.23.25",
+        "gray-matter": "^4.0.3",
         "lucide-react": "0.555.0",
         "next": "15.5.6",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "react-hook-form": "7.67.0",
         "react-hot-toast": "2.6.0",
+        "react-markdown": "^10.1.0",
         "tailwind-merge": "3.4.0",
         "zod": "4.1.13"
     },
