--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "pnpm run docs:generate && next build",
         "start": "next start",
         "wrangler:dev": "npx wrangler dev",
-        "dev:cf": "npx @opennextjs/cloudflare build && wrangler dev",
-        "dev:remote": "npx @opennextjs/cloudflare build && wrangler dev --remote",
-        "build:cf": "npx @opennextjs/cloudflare build",
+        "dev:cf": "pnpm run docs:generate && npx @opennextjs/cloudflare build && wrangler dev",
+        "dev:remote": "pnpm run docs:generate && npx @opennextjs/cloudflare build && wrangler dev --remote",
+        "build:cf": "pnpm run docs:generate && npx @opennextjs/cloudflare build",
         "deploy:cf": "npx @opennextjs/cloudflare deploy",
         "preview:cf": "npx @opennextjs/cloudflare preview",
         "deploy": "npx @opennextjs/cloudflare deploy",
         "deploy:preview": "npx @opennextjs/cloudflare deploy --env preview",
+        "docs:generate": "node scripts/generate-docs-static.mjs",
         "db:generate": "drizzle-kit generate",
         "db:generate:named": "drizzle-kit generate --name",
         "db:migrate:local": "wrangler d1 migrations apply jonas-versammlung-prod --local",
