feat: add lint check command and improve imports across various components

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "db:reset:local": "wrangler d1 execute jonas-versammlung-prod --local --command=\"DROP TABLE IF EXISTS organizations;\" && pnpm run db:migrate:local",
         "cf:secret": "npx wrangler secret put",
         "cf-typegen": "pnpm exec wrangler types && pnpm exec wrangler types --env-interface CloudflareEnv ./cloudflare-env.d.ts",
-        "lint": "npx biome format --write"
+        "lint": "npx biome format --write",
+        "lint:check": "npx biome check src"
     },
     "dependencies": {
         "@hookform/resolvers": "5.2.2",
