feat: enhance session validation with timeout and improved error handling in middleware feat: optimize database connection caching in getDb function

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,6 +16,9 @@
     "observability": {
         "enabled": true
     },
+    "limits": {
+        "cpu_ms": 50000
+    },
     "vars": {
         "NEXTJS_ENV": "production"
     },
